# RadixTree

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
analysis/: Geometric Distribution for Different p Values.tex  Geometric Distribution for Different p Values.tex.tex  Memory Size for different numbers of records.tex  Memory distribution between cache and buffer.tex  Speed comparison for varying p.tex  Varying coefficient of geometric distribution cached.tex  Varying coefficient of geometric distribution not cached.tex  Varying distribution cached.tex  Varying distribution not cached.tex  Workload A Statistics.tex  Workload A Throughput multiple threads.tex  Workload A Throughput.tex  Workload B Statistics.tex  Workload B Throughput multiple threads.tex  Workload B Throughput.tex  Workload C Statistics.tex  Workload C Throughput multiple threads.tex  Workload C Throughput.tex  Workload E Statistics.tex  Workload E Throughput.tex  Workload X Statistics.tex  Workload X Throughput.tex  analysis.asv  analysis.m
benchmark_scripts/: benchmarks.sh
benchmarks/: results.txt
cmake/: boost.cmake  doxygen.cmake  googletest.cmake
results/: 2023-8-1-7:7:53_test_results.csv  2023-8-5-14:21:53_test_results.csv  2023-8-7-10:14:34_test_results.csv
src/: Configuration.h  Main.cpp  RadixTree.cpp  configuration.h  main.cc
src/benchmark/: Benchmark.cpp  Benchmark.h  RunConfig.h  RunConfigOne.cpp  RunConfigOne.h  RunConfigTwo.cpp  RunConfigTwo.h  run_config.h  run_config_one.cc  run_config_one.h  run_config_two.cc  run_config_two.h
src/bplus_tree/: b_nodes.h  bplus_tree.h
src/bplustree/: BNodes.h  BPlusTree.h
src/btree/: BPlus.cpp  BPlus.h  Nodes.h
src/buffer_manager/: BufferManager.cpp  BufferManager.h
src/data/: BufferManager.cpp  BufferManager.h  DBManager.h  DataManager.cpp  DataManager.h  Frame.h  Header.h  StorageManager.cpp  StorageManager.h  buffer_manager.cc  buffer_manager.h  data_manager.cc  data_manager.h  storage_manager.cc  storage_manager.h
src/debug/: Debuger.cpp  Debuger.h  debuger.cc  debuger.h  debugger.cc  debugger.h
src/model/: BFrame.h  BHeader.h  Frame.h  Header.h  RFrame.h  RHeader.h  b_frame.h  b_header.h  r_frame.h  r_header.h
src/radix_tree/: r_nodes.h  radix_tree.cc  radix_tree.h
src/radixtree/: RNodes.h  RadixTree.cpp  RadixTree.h
src/run_suite/: benchmark.h  run_config.h  run_config_one.cc  run_config_one.h  run_config_two.cc  run_config_two.h  workload.h  workloads_script.h
src/utils/: File.h  Logger.h  RandomNumberGenerator.h  Time.h  logger.h  time.h  tree_operations.h
test/: Test_test.cc  main.cc
tests/: BNode_test.cc  BPlusTree_test.cc  BPlus_test.cc  BufferManager_test.cc  Node_test.cc  RNode_test.cc  RadixTree_test.cc  StorageManager_test.cc  b_node_test.cc  bplus_tree_test.cc  buffer_manager_test.cc  main.cc  r_node_test.cc  radix_tree_test.cc  storage_manager_test.cc
